--- a/client/src/CSS/scss_partials/_app.scss
+++ b/client/src/CSS/scss_partials/_app.scss
@@ -699,6 +699,12 @@ body {
 	.js-set-base-border-color-theme-blue-sky {
 		border-color: v.$theme-base-border-background-color-blue-sky;
 	}
+	.js-set-brighter-border-color-theme-blue-turquoise {
+		border-color: v.$theme-brighter-border-background-color-blue-turquoise;
+	}
+	.js-set-base-border-color-theme-blue-turquoise {
+		border-color: v.$theme-base-border-background-color-blue-turquoise;
+	}
 	.js-set-brighter-border-color-theme-purple-rain {
 		border-color: v.$theme-brighter-border-background-color-purple-rain;
 	}
@@ -725,6 +731,12 @@ body {
 	}
 	.js-set-base-background-color-theme-blue-sky {
 		background-color: v.$theme-base-border-background-color-blue-sky;
+	}
+	.js-set-brighter-background-color-theme-blue-turquoise {
+		background-color: v.$theme-brighter-border-background-color-blue-turquoise;
+	}
+	.js-set-base-background-color-theme-blue-turquoise {
+		background-color: v.$theme-base-border-background-color-blue-turquoise;
 	}
 	.js-set-brighter-background-color-theme-purple-rain {
 		background-color: v.$theme-brighter-border-background-color-purple-rain;
@@ -758,6 +770,14 @@ body {
 			background-color: v.$theme-base-border-background-color-blue-sky;
 		}
 	}
+	.js-set-background-color-with-hover-theme-blue-turquoise {
+		background-color: v.$theme-brighter-border-background-color-blue-turquoise;
+
+		&:hover,
+		&:active {
+			background-color: v.$theme-base-border-background-color-blue-turquoise;
+		}
+	}
 	.js-set-background-color-with-hover-theme-purple-rain {
 		background-color: v.$theme-brighter-border-background-color-purple-rain;
 
@@ -785,6 +805,12 @@ body {
 	}
 	.js-set-base-breadcrumb-arrow-color-theme-blue-sky {
 		border-left-color: v.$theme-base-border-background-color-blue-sky;
+	}
+	.js-set-brighter-breadcrumb-arrow-color-theme-blue-turquoise {
+		border-left-color: v.$theme-brighter-border-background-color-blue-turquoise;
+	}
+	.js-set-base-breadcrumb-arrow-color-theme-blue-turquoise {
+		border-left-color: v.$theme-base-border-background-color-blue-turquoise;
 	}
 	.js-set-brighter-breadcrumb-arrow-color-theme-purple-rain {
 		border-left-color: v.$theme-brighter-border-background-color-purple-rain;
@@ -819,6 +845,15 @@ body {
 		&:active,
 		&:focus {
 			background-color: v.$theme-base-border-background-color-blue-sky;
+		}
+	}
+	.js-set-form-submit-button-color-theme-blue-turquoise {
+		background-color: v.$theme-brighter-border-background-color-blue-turquoise;
+
+		&:hover,
+		&:active,
+		&:focus {
+			background-color: v.$theme-base-border-background-color-blue-turquoise;
 		}
 	}
 	.js-set-form-submit-button-color-theme-purple-rain {
@@ -865,6 +900,16 @@ body {
 			border-color: v.$theme-mode-blue-sky-focus-border-color-dark;
 		}
 	}
+	.js-set-focus-border-color-mode-light-theme-blue-turquoise {
+		&:focus {
+			border-color: v.$theme-mode-blue-turquoise-focus-border-color-light;
+		}
+	}
+	.js-set-focus-border-color-mode-dark-theme-blue-turquoise {
+		&:focus {
+			border-color: v.$theme-mode-blue-turquoise-focus-border-color-dark;
+		}
+	}
 	.js-set-focus-border-color-mode-light-theme-purple-rain {
 		&:focus {
 			border-color: v.$theme-mode-purple-rain-focus-border-color-light;
@@ -894,6 +939,12 @@ body {
 	}
 	.js-set-text-color-mode-dark-theme-blue-sky {
 		color: v.$theme-mode-blue-sky-text-color-dark;
+	}
+	.js-set-text-color-mode-light-theme-blue-turquoise {
+		color: v.$theme-mode-blue-turquoise-text-color-light;
+	}
+	.js-set-text-color-mode-dark-theme-blue-turquoise {
+		color: v.$theme-mode-blue-turquoise-text-color-dark;
 	}
 	.js-set-text-color-mode-light-theme-purple-rain {
 		color: v.$theme-mode-purple-rain-text-color-light;
@@ -1011,6 +1062,42 @@ body {
 			color: v.$theme-mode-blue-sky-text-color-dark;
 		}
 	}
+	.js-set-custom-checkbox-border-background-text-color-mode-light-theme-blue-turquoise {
+		border-color: v.$mode-custom-checkbox-border-color-light;
+		background-color: v.$mode-custom-checkbox-background-color-light;
+
+		&:hover {
+			border-color: v.$theme-mode-blue-turquoise-text-color-light;
+		}
+
+		// For checkmark
+		& + i {
+			color: v.$mode-custom-checkmark-text-color-light;
+		}
+
+		// For checkmark
+		&:hover + i {
+			color: v.$theme-mode-blue-turquoise-text-color-light;
+		}
+	}
+	.js-set-custom-checkbox-border-background-text-color-mode-dark-theme-blue-turquoise {
+		border-color: v.$mode-custom-checkbox-border-color-dark;
+		background-color: v.$mode-custom-checkbox-background-color-dark;
+
+		&:hover {
+			border-color: v.$theme-mode-blue-turquoise-text-color-dark;
+		}
+
+		// For checkmark
+		& + i {
+			color: v.$mode-custom-checkmark-text-color-dark;
+		}
+
+		// For checkmark
+		&:hover + i {
+			color: v.$theme-mode-blue-turquoise-text-color-dark;
+		}
+	}
 	.js-set-custom-checkbox-border-background-text-color-mode-light-theme-purple-rain {
 		border-color: v.$mode-custom-checkbox-border-color-light;
 		background-color: v.$mode-custom-checkbox-background-color-light;
@@ -1121,6 +1208,30 @@ body {
 			background-color: v.$theme-base-border-background-color-blue-sky;
 		}
 	}
+	.js-set-top-bar-search-bar-border-background-text-color-mode-light-theme-blue-turquoise {
+		& > input {
+			border-color: v.$theme-base-border-background-color-blue-turquoise;
+			background-color: v.$mode-top-bar-search-bar-background-color-light;
+			color: v.$mode-top-bar-search-bar-text-color-light;
+		}
+
+		& > div {
+			border-color: v.$theme-base-border-background-color-blue-turquoise;
+			background-color: v.$theme-base-border-background-color-blue-turquoise;
+		}
+	}
+	.js-set-top-bar-search-bar-border-background-text-color-mode-dark-theme-blue-turquoise {
+		& > input {
+			border-color: v.$theme-base-border-background-color-blue-turquoise;
+			background-color: v.$mode-top-bar-search-bar-background-color-dark;
+			color: v.$mode-top-bar-search-bar-text-color-dark;
+		}
+
+		& > div {
+			border-color: v.$theme-base-border-background-color-blue-turquoise;
+			background-color: v.$theme-base-border-background-color-blue-turquoise;
+		}
+	}
 	.js-set-top-bar-search-bar-border-background-text-color-mode-light-theme-purple-rain {
 		& > input {
 			border-color: v.$theme-base-border-background-color-purple-rain;
@@ -1199,6 +1310,24 @@ body {
 
 		&:focus + .name-centering-container__char-count-centering-container {
 			border-color: v.$theme-mode-blue-sky-focus-border-color-dark;
+		}
+	}
+	.js-set-item-view-edit-item-info-form-name-input-focus-border-color-mode-light-theme-blue-turquoise {
+		&:focus {
+			border-color: v.$theme-mode-blue-turquoise-focus-border-color-light;
+		}
+
+		&:focus + .name-centering-container__char-count-centering-container {
+			border-color: v.$theme-mode-blue-turquoise-focus-border-color-light;
+		}
+	}
+	.js-set-item-view-edit-item-info-form-name-input-focus-border-color-mode-dark-theme-blue-turquoise {
+		&:focus {
+			border-color: v.$theme-mode-blue-turquoise-focus-border-color-dark;
+		}
+
+		&:focus + .name-centering-container__char-count-centering-container {
+			border-color: v.$theme-mode-blue-turquoise-focus-border-color-dark;
 		}
 	}
 	.js-set-item-view-edit-item-info-form-name-input-focus-border-color-mode-light-theme-purple-rain {
