Refactored sass for theme and theme-mode class names to abstract logic to mixins

--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -133,6 +133,7 @@ $turkish-blue-level-5: #537c8d;
 $turkish-blue-level-6: #50798b;
 // Turquoise blues
 $turquoise-blue-level-1: #45C3B8;
+$turquoise-blue-level-2: #44bdb3;
 // Candy purples
 $candy-purple-level-1: #b68bdb;
 $candy-purple-level-2: #a982cc;
@@ -338,7 +339,7 @@ $theme-brighter-border-background-color-blue-queen: $queen-blue-light-level-1;
 $theme-base-border-background-color-blue-queen: $queen-blue-dark-level-1;
 $theme-brighter-border-background-color-blue-sky: $sky-blue-light-level-2;
 $theme-base-border-background-color-blue-sky: $sky-blue-level-2;
-$theme-brighter-border-background-color-blue-turquoise: $turquoise-blue-level-1;
+$theme-brighter-border-background-color-blue-turquoise: $turquoise-blue-level-2;
 $theme-base-border-background-color-blue-turquoise: $maganese-blue-level-3;
 $theme-brighter-border-background-color-purple-rain: $rain-purple-light-level-2;
 $theme-base-border-background-color-purple-rain: $rain-purple-level-4;
