--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -3423,7 +3423,7 @@ body {
 }
 .app-component .js-set-brighter-border-color-theme-blue-turquoise,
 .js-calc-app-component .js-set-brighter-border-color-theme-blue-turquoise {
-  border-color: #45C3B8;
+  border-color: #44bdb3;
 }
 .app-component .js-set-base-border-color-theme-blue-turquoise,
 .js-calc-app-component .js-set-base-border-color-theme-blue-turquoise {
@@ -3463,7 +3463,7 @@ body {
 }
 .app-component .js-set-brighter-background-color-theme-blue-turquoise,
 .js-calc-app-component .js-set-brighter-background-color-theme-blue-turquoise {
-  background-color: #45C3B8;
+  background-color: #44bdb3;
 }
 .app-component .js-set-base-background-color-theme-blue-turquoise,
 .js-calc-app-component .js-set-base-background-color-theme-blue-turquoise {
@@ -3506,7 +3506,7 @@ body {
 }
 .app-component .js-set-background-color-with-hover-theme-blue-turquoise,
 .js-calc-app-component .js-set-background-color-with-hover-theme-blue-turquoise {
-  background-color: #45C3B8;
+  background-color: #44bdb3;
 }
 .app-component .js-set-background-color-with-hover-theme-blue-turquoise:hover, .app-component .js-set-background-color-with-hover-theme-blue-turquoise:active,
 .js-calc-app-component .js-set-background-color-with-hover-theme-blue-turquoise:hover,
@@ -3548,7 +3548,7 @@ body {
 }
 .app-component .js-set-brighter-breadcrumb-arrow-color-theme-blue-turquoise,
 .js-calc-app-component .js-set-brighter-breadcrumb-arrow-color-theme-blue-turquoise {
-  border-left-color: #45C3B8;
+  border-left-color: #44bdb3;
 }
 .app-component .js-set-base-breadcrumb-arrow-color-theme-blue-turquoise,
 .js-calc-app-component .js-set-base-breadcrumb-arrow-color-theme-blue-turquoise {
@@ -3594,7 +3594,7 @@ body {
 }
 .app-component .js-set-form-submit-button-color-theme-blue-turquoise,
 .js-calc-app-component .js-set-form-submit-button-color-theme-blue-turquoise {
-  background-color: #45C3B8;
+  background-color: #44bdb3;
 }
 .app-component .js-set-form-submit-button-color-theme-blue-turquoise:hover, .app-component .js-set-form-submit-button-color-theme-blue-turquoise:active, .app-component .js-set-form-submit-button-color-theme-blue-turquoise:focus,
 .js-calc-app-component .js-set-form-submit-button-color-theme-blue-turquoise:hover,
